--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
